# cw-ip-213_keyboardninja

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  makefile
sources/: Lastfile.c  Lastfile.h  main.c
src/main/: main.c
test/: main.c  parser_test.c
tests/: test_main.c
texts/ENG/: eng1.txt  eng2.txt  eng3.txt
